web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-declaration3/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,26)
1|class X { async function f() { let await } }
 |                        ^
[SyntaxError]: modifier async can not use with class property. (1,17)
1|class X { async function f() { let await } }
 |               ^
